--- a/Users.API/appsettings.json
+++ b/Users.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UserConnection": "Data Source=ULTRANOTE;Initial Catalog=TreinoAPI;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
