criacao do LoginController e LoginService

--- a/Users.API/appsettings.json
+++ b/Users.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserConnection": "Data Source=ULTRANOTE;Initial Catalog=TreinoAPI;Integrated Security=True;Trust Server Certificate=True"
+    "UserConnection": "Data Source=DESKTOP-SD3LB7D;Initial Catalog=Treino;Integrated Security=True;Trust Server Certificate=True"
   }
 }
