--- a/Treino.API/Properties/launchSettings.json
+++ b/Treino.API/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "Swagger/index.html",
-      "applicationUrl": "http://localhost:5202",
+      "applicationUrl": "https://localhost:7092",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
