--- a/Users.API/Properties/launchSettings.json
+++ b/Users.API/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "Swagger/index.html",
       "applicationUrl": "http://localhost:5193",
       "environmentVariables": {
@@ -14,7 +14,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "Swagger/index.html",
       "applicationUrl": "https://localhost:7125;http://localhost:5193",
       "environmentVariables": {
